--- a/index.html
+++ b/index.html
@@ -164,3 +164,320 @@
                 </div>
               </div>
             ))}
+          </div>
+        );
+      }
+
+      function ProcessCards() {
+        const rows = [
+          { k:"1. Pre Construction Planning", v:"Initial meetings with your architect/design team—or an interview process with our preferred partners." },
+          { k:"2. Field Mindset", v:"Set trades up for success through clarity: clean scopes, sequencing, and jobsite readiness." },
+          { k:"3. Office Mindset", v:"Weekly homeowner meetings for updates and selections approvals. Timely purchase orders so materials are onsite when needed." },
+          { k:"4. Detailed Home Delivery", v:"A fully searchable digital turnover package with warranties, trade contacts, final build sheet, and appliance documentation." },
+        ];
+        return (
+          <div className="grid gap-3">
+            {rows.map(r=>(
+              <div key={r.k} className="rounded-2xl border border-[#C9A24A]/20 bg-[#030A05]/65 p-4">
+                <div className="text-sm font-semibold">{r.k}</div>
+                <div className="mt-1 text-sm text-[#EDE7D9]/70">{r.v}</div>
+              </div>
+            ))}
+          </div>
+        );
+      }
+
+      function FAQ() {
+        const faqs = [
+          { q:"Do you work cost-plus?", a:"Yes. We build primarily on a cost-plus basis with clear scope, allowances, and change control." },
+          { q:"Do you require an architect?", a:"We can start with your existing architect, or we can help you interview and select from preferred partners." },
+          { q:"What neighborhoods do you focus on?", a:"Highland Park, Preston Hollow, and Historic Old East Dallas." },
+        ];
+        return (
+          <div className="grid gap-3">
+            {faqs.map(f=>(
+              <div key={f.q} className="rounded-2xl border border-[#C9A24A]/20 bg-[#030A05]/65 p-5">
+                <div className="text-sm font-semibold">{f.q}</div>
+                <div className="mt-2 text-sm text-[#EDE7D9]/70">{f.a}</div>
+              </div>
+            ))}
+          </div>
+        );
+      }
+
+      function ContactCard() {
+        return (
+          <GlassCard className="p-6">
+            <div className="text-sm font-semibold">Contact</div>
+            <div className="mt-4 grid gap-3">
+              <a href={BRAND.phoneHref} className="flex items-center justify-between rounded-3xl border border-[#C9A24A]/20 bg-[#C9A24A]/4 p-5 transition hover:bg-[#C9A24A]/10">
+                <div className="flex items-center gap-3">
+                  <div className="rounded-2xl border border-[#C9A24A]/25 bg-[#030A05]/65 p-2">
+                    <Icon.Phone className="h-5 w-5 text-[#C9A24A]" />
+                  </div>
+                  <div>
+                    <div className="text-sm font-semibold">Call</div>
+                    <div className="text-sm text-[#EDE7D9]/70">{BRAND.phoneDisplay}</div>
+                  </div>
+                </div>
+                <Icon.ArrowRight className="h-5 w-5 text-[#EDE7D9]/60" />
+              </a>
+
+              <a href={BRAND.emailHref} className="flex items-center justify-between rounded-3xl border border-[#C9A24A]/20 bg-[#C9A24A]/4 p-5 transition hover:bg-[#C9A24A]/10">
+                <div className="flex items-center gap-3">
+                  <div className="rounded-2xl border border-[#C9A24A]/25 bg-[#030A05]/65 p-2">
+                    <Icon.Mail className="h-5 w-5 text-[#C9A24A]" />
+                  </div>
+                  <div>
+                    <div className="text-sm font-semibold">Email</div>
+                    <div className="text-sm text-[#EDE7D9]/70">{BRAND.emailDisplay}</div>
+                  </div>
+                </div>
+                <Icon.ArrowRight className="h-5 w-5 text-[#EDE7D9]/60" />
+              </a>
+
+              <div className="rounded-3xl border border-[#C9A24A]/20 bg-[#C9A24A]/4 p-5">
+                <div className="flex items-center gap-3">
+                  <div className="rounded-2xl border border-[#C9A24A]/25 bg-[#030A05]/65 p-2">
+                    <Icon.MapPin className="h-5 w-5 text-[#C9A24A]" />
+                  </div>
+                  <div>
+                    <div className="text-sm font-semibold">Service areas</div>
+                    <div className="text-sm text-[#EDE7D9]/70">Dallas</div>
+                  </div>
+                </div>
+                <div className="mt-4 flex flex-wrap gap-2">
+                  <Pill>Highland Park</Pill>
+                  <Pill>Preston Hollow</Pill>
+                  <Pill>Historic Old East Dallas</Pill>
+                </div>
+              </div>
+            </div>
+          </GlassCard>
+        );
+      }
+
+      function PageWrap({ eyebrow, title, subtitle, children, right }) {
+        return (
+          <div className="mx-auto max-w-6xl px-4 pb-16 pt-10">
+            <div className="grid gap-8 md:grid-cols-2 md:items-end">
+              <div>
+                <div className="text-[11px] uppercase tracking-[0.22em] text-[#EDE7D9]/55">{eyebrow}</div>
+                <h1 className="mt-3 text-3xl font-semibold tracking-tight md:text-4xl">{title}</h1>
+                {subtitle ? (
+                  <p className="mt-3 max-w-2xl text-sm leading-relaxed text-[#EDE7D9]/70 md:text-base">{subtitle}</p>
+                ) : null}
+              </div>
+              {right ? <div className="md:justify-self-end">{right}</div> : null}
+            </div>
+            <div className="mt-8">{children}</div>
+          </div>
+        );
+      }
+
+      function App() {
+        const nav = useMemo(() => ([
+          { id:"home", label:"Home" },
+          { id:"approach", label:"Approach" },
+          { id:"capabilities", label:"Capabilities" },
+          { id:"standards", label:"Standards" },
+          { id:"faq", label:"FAQ" },
+          { id:"contact", label:"Contact" },
+        ]), []);
+        const [page, setPage] = useState("home");
+
+        return (
+          <div className="min-h-screen">
+            <div className="pointer-events-none fixed inset-0">
+              <div className="absolute inset-0 bg-[radial-gradient(900px_500px_at_15%_10%,rgba(201,162,74,0.10),transparent_60%)]"></div>
+              <div className="absolute inset-0 bg-[radial-gradient(700px_450px_at_85%_30%,rgba(201,162,74,0.08),transparent_60%)]"></div>
+              <div className="absolute inset-0 bg-gradient-to-b from-[#071E12] via-[#05110A] to-[#030A05]"></div>
+            </div>
+
+            <header className="sticky top-0 z-50 border-b border-[#C9A24A]/20 bg-[#071E12]/75 backdrop-blur">
+              <div className="mx-auto flex max-w-6xl items-center justify-between px-4 py-3">
+                <button onClick={()=>setPage("home")} className="text-left">
+                  <div className="text-lg font-semibold">{BRAND.name}</div>
+                  <div className="text-sm text-[#EDE7D9]/60">{BRAND.city}</div>
+                </button>
+
+                <nav className="hidden md:flex items-center gap-6">
+                  {nav.map(n=>(
+                    <button
+                      key={n.id}
+                      onClick={()=>setPage(n.id)}
+                      className={cn(
+                        "text-[11px] font-semibold tracking-[0.22em] uppercase transition",
+                        page===n.id ? "text-[#C9A24A]" : "text-[#EDE7D9]/70 hover:text-[#EDE7D9]"
+                      )}
+                    >
+                      {n.label}
+                    </button>
+                  ))}
+                </nav>
+
+                <div className="flex items-center gap-2">
+                  <Button variant="ghost" href={BRAND.phoneHref}>
+                    <Icon.Phone className="h-4 w-4" />
+                    Call
+                  </Button>
+                  <Button variant="primary" onClick={()=>setPage("contact")}>
+                    Start a build <Icon.ArrowRight className="h-4 w-4" />
+                  </Button>
+                </div>
+              </div>
+            </header>
+
+            {page === "home" ? (
+              <>
+                <div className="mx-auto grid max-w-6xl gap-10 px-4 pb-12 pt-10 md:grid-cols-2 md:items-center md:pb-16">
+                  <div>
+                    <div className="flex flex-wrap gap-2">
+                      <Pill>Luxury custom homebuilder</Pill>
+                      <Pill>Veteran-owned</Pill>
+                      <Pill>{BRAND.city}</Pill>
+                    </div>
+
+                    <h1 className="mt-6 text-4xl font-semibold leading-[1.05] tracking-tight md:text-6xl">
+                      We build homes you don’t forget.
+                    </h1>
+
+                    <p className="mt-5 max-w-xl text-base leading-relaxed text-[#EDE7D9]/70 md:text-lg">
+                      Star &amp; Brass Group is a Dallas-based startup run by two Marine Corps veterans.
+                      We bring building science fundamentals and hands-on experience across building materials,
+                      multifamily, production luxury townhomes, semi-custom, and full luxury custom homes—typically
+                      starting around $700/sf on a cost-plus basis.
+                    </p>
+
+                    <div className="mt-7 flex flex-col gap-3 sm:flex-row">
+                      <Button variant="primary" onClick={()=>setPage("contact")}>
+                        Request a consult <Icon.ArrowRight className="h-4 w-4" />
+                      </Button>
+                      <Button variant="ghost" onClick={()=>setPage("approach")}>
+                        How we work
+                      </Button>
+                      <Button variant="ghost" onClick={()=>setPage("standards")}>
+                        Our standard
+                      </Button>
+                    </div>
+
+                    <GlassCard className="mt-8 p-5">
+                      <div className="text-sm font-semibold">
+                        Build your dream with detail-oriented building science professionals.
+                      </div>
+                      <div className="mt-1 text-sm text-[#EDE7D9]/70">
+                        Clear decisions, disciplined execution, and a team built to protect the standard.
+                      </div>
+                    </GlassCard>
+                  </div>
+
+                  <div className="relative">
+                    <GlassCard className="p-4 shadow-[0_40px_140px_rgba(0,0,0,0.70)]">
+                      <div className="rounded-[28px] border border-[#C9A24A]/20 bg-gradient-to-br from-[#C9A24A]/12 via-[#C9A24A]/7 to-transparent p-5">
+                        <div className="text-[11px] uppercase tracking-[0.22em] text-[#EDE7D9]/60">
+                          Startup, serious systems
+                        </div>
+                        <div className="mt-6 grid gap-3">
+                          {[
+                            { k:"1. Pre Construction Planning", v:"Initial meetings with your architect/design team—or an interview process with our preferred partners." },
+                            { k:"2. Field Mindset", v:"Set trades up for success through clarity: clean scopes, sequencing, and jobsite readiness." },
+                            { k:"3. Office Mindset", v:"Weekly homeowner meetings for updates and selections approvals. Timely purchase orders so materials are onsite when needed." },
+                            { k:"4. Detailed Home Delivery", v:"A fully searchable digital turnover package with warranties, trade contacts, final build sheet, and appliance documentation." },
+                          ].map((row)=>(
+                            <div key={row.k} className="rounded-2xl border border-[#C9A24A]/20 bg-[#030A05]/65 p-4">
+                              <div className="text-sm font-semibold">{row.k}</div>
+                              <div className="mt-1 text-sm text-[#EDE7D9]/70">{row.v}</div>
+                            </div>
+                          ))}
+                        </div>
+                      </div>
+                    </GlassCard>
+                  </div>
+                </div>
+
+                <Divider />
+
+                <div className="mx-auto max-w-6xl px-4 py-14">
+                  <div className="grid gap-8 md:grid-cols-2 md:items-end">
+                    <div>
+                      <div className="text-[11px] uppercase tracking-[0.22em] text-[#EDE7D9]/55">
+                        Visual direction
+                      </div>
+                      <h2 className="mt-3 text-3xl font-semibold tracking-tight md:text-4xl">
+                        Cinematic concept, photo-ready standards
+                      </h2>
+                      <p className="mt-3 max-w-2xl text-sm leading-relaxed text-[#EDE7D9]/70 md:text-base">
+                        We’re a startup, so we won’t borrow photos from past employers. Until our first builds are shot,
+                        we show concept media and material direction to communicate taste and standards.
+                      </p>
+                    </div>
+                    <div className="flex justify-start md:justify-end">
+                      <Button variant="ghost" onClick={()=>setPage("contact")}>
+                        Talk scope <Icon.ArrowRight className="h-4 w-4" />
+                      </Button>
+                    </div>
+                  </div>
+
+                  <div className="mt-8">
+                    <VisualDirectionVideo />
+                    <div className="mt-6">
+                      <ConceptGallery />
+                    </div>
+                  </div>
+                </div>
+              </>
+            ) : null}
+
+            {page === "approach" ? (
+              <PageWrap
+                eyebrow="Approach"
+                title="How we run work"
+                subtitle="Predictable outcomes come from disciplined systems."
+                right={<Button variant="ghost" onClick={()=>setPage("contact")}>Start a build <Icon.ArrowRight className="h-4 w-4" /></Button>}
+              >
+                <div className="grid gap-8 md:grid-cols-2">
+                  <ProcessCards />
+                  <GlassCard className="p-6">
+                    <div className="text-sm font-semibold">Owner experience</div>
+                    <div className="mt-2 text-sm text-[#EDE7D9]/70">
+                      Tight scopes. Clean sequencing. Decisions made with context. Site stays disciplined.
+                    </div>
+                    <div className="mt-5 grid gap-3">
+                      {["Clear precon expectations", "Field execution that protects finishes", "Office cadence that keeps choices moving", "Turnover package you can actually use"].map(x=>(
+                        <div key={x} className="flex items-center gap-3 rounded-2xl border border-[#C9A24A]/20 bg-[#030A05]/65 p-4">
+                          <div className="rounded-xl border border-[#C9A24A]/25 bg-[#C9A24A]/6 p-1.5">
+                            <Icon.Check className="h-4 w-4 text-[#C9A24A]" />
+                          </div>
+                          <div className="text-sm text-[#EDE7D9]/75">{x}</div>
+                        </div>
+                      ))}
+                    </div>
+                  </GlassCard>
+                </div>
+              </PageWrap>
+            ) : null}
+
+            {page === "capabilities" ? (
+              <PageWrap
+                eyebrow="Capabilities"
+                title="What we build"
+                subtitle="Luxury custom homes and major renovations, executed with building science fundamentals."
+                right={<Button variant="ghost" onClick={()=>setPage("contact")}>Talk scope <Icon.ArrowRight className="h-4 w-4" /></Button>}
+              >
+                <div className="grid gap-6 md:grid-cols-2">
+                  <GlassCard className="p-6">
+                    <div className="text-sm font-semibold">Custom homes</div>
+                    <div className="mt-2 text-sm text-[#EDE7D9]/70">
+                      Full-service build management from precon through closeout.
+                    </div>
+                  </GlassCard>
+                  <GlassCard className="p-6">
+                    <div className="text-sm font-semibold">Major renovations</div>
+                    <div className="mt-2 text-sm text-[#EDE7D9]/70">
+                      Structural and envelope work planned to protect the final product.
+                    </div>
+                  </GlassCard>
+                  <GlassCard className="p-6 md:col-span-2">
+                    <div className="text-sm font-semibold">Team integration</div>
+                    <div className="mt-2 text-sm text-[#EDE7D9]/70">
+                      Work with your architect + designer, or we’ll help you interview
