--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                 <div className="mt-8">
                   <VisualDirectionVideo />
                   <div className="mt-6"><ConceptGallery /></div>
-                  <div className="mx-auto max-w-6xl px-4 pb-8 -mt-6">
-  <div className="text-xs text-[#EDE7D9]/60">
+                  <div className="mx-auto max-w-6xl px-4 pb-8 mt-12">
+  <div className="text-base text-[#EDE7D9]/60">
     X-Factor: The concept gallery includes graceful image fallbacks—if a photo is missing or misnamed, the site shows a clean branded placeholder instead of breaking the layout. This keeps the experience polished while we’re a startup building our first portfolio.
   </div>
 </div>
