--- a/index.html
+++ b/index.html
@@ -436,7 +436,32 @@
                   <div className="mt-6"><ConceptGallery /></div>
                   <div className="mx-auto max-w-6xl px-4 pb-8 mt-12">
   <div className="text-base text-[#EDE7D9]/60">
-    X-Factor: The concept gallery includes graceful image fallbacks—if a photo is missing or misnamed, the site shows a clean branded placeholder instead of breaking the layout. This keeps the experience polished while we’re a startup building our first portfolio.
+  <GlassCard className="p-6">
+  <div className="text-sm font-semibold">Lot Scout Copilot (Pilot)</div>
+  <div className="mt-2 text-sm text-[#EDE7D9]/70">
+    Shortlist buildable lots, compare neighborhoods using dataset-based signals, and confirm jurisdiction
+    before we spend time on a site visit.
+  </div>
+
+  <div className="mt-4 flex flex-wrap gap-3">
+    <a
+      href="https://ais-pre-z2wsyvthrlnd3dddxitc64-181965608527.us-east1.run.app"
+      target="_blank"
+      rel="noopener noreferrer"
+      className="inline-flex items-center gap-2 rounded-xl border border-[#EDE7D9]/25 bg-[#EDE7D9]/10 px-4 py-2 text-sm font-semibold text-[#EDE7D9] hover:bg-[#EDE7D9]/15"
+    >
+      Launch Copilot <Icon.ArrowUpRight className="h-4 w-4" />
+    </a>
+
+    <Button variant="ghost" onClick={onContact}>
+      Talk through lots <Icon.ArrowRight className="h-4 w-4" />
+    </Button>
+  </div>
+
+  <div className="mt-3 text-xs text-[#EDE7D9]/60">
+    Pilot uses a curated dataset updated weekly. Production version would connect to an authorized MLS feed.
+  </div>
+</GlassCard>
   </div>
 </div>
 
