--- a/index.html
+++ b/index.html
@@ -450,12 +450,15 @@
       rel="noopener noreferrer"
       className="inline-flex items-center gap-2 rounded-xl border border-[#EDE7D9]/25 bg-[#EDE7D9]/10 px-4 py-2 text-sm font-semibold text-[#EDE7D9] hover:bg-[#EDE7D9]/15"
     >
-      Launch Copilot <Icon.ArrowUpRight className="h-4 w-4" />
+      Launch Copilot <Icon.ArrowRight className="h-4 w-4" />
     </a>
 
-    <Button variant="ghost" onClick={onContact}>
-      Talk through lots <Icon.ArrowRight className="h-4 w-4" />
-    </Button>
+    <a
+  href="/contact"
+  className="inline-flex items-center gap-2 rounded-xl border border-[#EDE7D9]/25 bg-transparent px-4 py-2 text-sm font-semibold text-[#EDE7D9] hover:bg-[#EDE7D9]/10"
+>
+  Talk through lots <Icon.ArrowRight className="h-4 w-4" />
+</a>
   </div>
 
   <div className="mt-3 text-xs text-[#EDE7D9]/60">
