--- a/index.html
+++ b/index.html
@@ -414,17 +414,24 @@
                   </GlassCard>
                 </div>
               </div>
-<div className="mt-4 flex flex-wrap gap-3">
-    <a
-      href="https://ais-pre-z2wsyvthrlnd3dddxitc64-181965608527.us-east1.run.app"
-      target="_blank"
-      rel="noopener noreferrer"
-      className="inline-flex items-center gap-2 rounded-xl border border-[#EDE7D9]/25 bg-[#EDE7D9]/10 px-4 py-2 text-sm font-semibold text-[#EDE7D9] hover:bg-[#EDE7D9]/15"
-    >
-      Launch Copilot <Icon.ArrowRight className="h-4 w-4" />
-    </a>
+<div className="mt-6 flex flex-wrap gap-3">
+  <a
+    href="https://ais-pre-z2wsyvthr1nd3dddxitc64-181965608527.us-east1.run.app"
+    target="_blank"
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-2 rounded-xl border border-[#EDE7D9]/25 bg-[#EDE7D9]/10 px-4 py-2 text-sm font-semibold text-[#EDE7D9] hover:bg-[#EDE7D9]/15"
+  >
+    Launch Copilot <Icon.ArrowRight className="h-4 w-4" />
+  </a>
+</div>
 
-  </div>
+<Divider />
+
+<div className="mx-auto max-w-6xl px-4 py-14">
+  <div className="grid gap-8 md:grid-cols-2 md:items-end">
+    <div>
+      <div className="text-[11px] uppercase ...">Visual direction</div>
+      ...
               <Divider />
 
               <div className="mx-auto max-w-6xl px-4 py-14">
@@ -436,9 +443,7 @@
                       We’re a startup, so we won’t borrow photos from past employers. Until our first builds are shot, we show concept media and material direction to communicate taste and standards.
                     </p>
                   </div>
-                  <div className="flex justify-start md:justify-end">
-                    <Button variant="ghost" onClick={onContact}>Talk scope <Icon.ArrowRight className="h-4 w-4" /></Button>
-                  </div>
+                
                 </div>
 
                 <div className="mt-8">
@@ -446,25 +451,6 @@
                   <div className="mt-6"><ConceptGallery /></div>
                   <div className="mx-auto max-w-6xl px-4 pb-8 mt-12">
   <div className="text-base text-[#EDE7D9]/60">
-  <GlassCard className="p-6">
-  <div className="text-sm font-semibold">Lot Scout Copilot (Pilot)</div>
-  <div className="mt-2 text-sm text-[#EDE7D9]/70">
-    Shortlist buildable lots, compare neighborhoods using dataset-based signals, and confirm jurisdiction
-    before we spend time on a site visit.
-  </div>
-
-  <div className="mt-3 text-xs text-[#EDE7D9]/60">
-    Pilot uses a curated dataset updated weekly. Production version would connect to an authorized MLS feed.
-  </div>
-</GlassCard>
-  </div>
-</div>
-
-                </div>
-              </div>
-            </>
-          );
-        }
 
         function ApproachPage({ onContact }) {
           return (
