--- a/index.html
+++ b/index.html
@@ -416,7 +416,31 @@
               </div>
 
               <Divider />
+<div className="mx-auto max-w-6xl px-4 pt-14 pb-0">
+  <GlassCard className="p-6">
+    <div className="flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
+      <div>
+        <div className="text-sm font-semibold">DFW Lot Scout Copilot (Pilot)</div>
+        <div className="mt-2 text-sm text-[#EDE7D9]/70">
+          Shortlist buildable lots, compare neighborhoods using dataset-based signals, and confirm jurisdiction
+          before we spend time on a site visit.
+        </div>
+        <div className="mt-3 text-xs text-[#EDE7D9]/60">
+          Pilot uses a curated dataset updated weekly. Production version would connect to an authorized MLS feed.
+        </div>
+      </div>
 
+      <a
+        href="https://ais-pre-z2wsyvthr1nd3dddxitc64-181965608527.us-east1.run.app"
+        target="_blank"
+        rel="noopener noreferrer"
+        className="inline-flex items-center justify-center gap-2 rounded-2xl border border-[#C9A24A]/25 bg-[#C9A24A]/10 px-4 py-3 text-sm font-semibold tracking-wide transition hover:bg-[#C9A24A]/15 no-select"
+      >
+        Launch Lot Scout <Icon.ArrowRight className="h-4 w-4" />
+      </a>
+    </div>
+  </GlassCard>
+</div>
               <div className="mx-auto max-w-6xl px-4 py-14">
                 <div className="grid gap-8 md:grid-cols-2 md:items-end">
                   <div>
@@ -434,11 +458,6 @@
                 <div className="mt-8">
                   <VisualDirectionVideo />
                   <div className="mt-6"><ConceptGallery /></div>
-                  <div className="mx-auto max-w-6xl px-4 pb-8 mt-12">
-  <div className="text-base text-[#EDE7D9]/60">
-    X-Factor: The concept gallery includes graceful image fallbacks—if a photo is missing or misnamed, the site shows a clean branded placeholder instead of breaking the layout. This keeps the experience polished while we’re a startup building our first portfolio.
-  </div>
-</div>
 
                 </div>
               </div>
