--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       </div>
 
       <a
-        href="https://dfw-lot-scout-copilot-511509419148.us-west1.run.app"
+        href="https://ais-pre-z2wsyvthrlnd3dddxitc64-181965608527.us-east1.run.app"
         target="_blank"
         rel="noopener noreferrer"
         className="inline-flex items-center justify-center gap-2 rounded-2xl border border-[#C9A24A]/25 bg-[#C9A24A]/10 px-4 py-3 text-sm font-semibold tracking-wide transition hover:bg-[#C9A24A]/15 no-select"
